Add handler to get products
