# internal/handler/http/v1/product.go
@@ -6,6 +6,8 @@ import (
 
 	"github.com/gin-gonic/gin"
 	"github.com/pkg/errors"
+	"github.com/satriowisnugroho/catalog/internal/entity"
+	"github.com/satriowisnugroho/catalog/internal/entity/types"
 	"github.com/satriowisnugroho/catalog/internal/parser"
 	"github.com/satriowisnugroho/catalog/internal/response"
 	"github.com/satriowisnugroho/catalog/internal/usecase"
@@ -33,6 +35,7 @@ func newProductHandler(
 	{
 		h.POST("/", r.CreateProduct)
 		h.GET("/:id", r.GetProductByID)
+		h.GET("/", r.GetProducts)
 		h.PUT("/:id", r.UpdateProduct)
 	}
 }
@@ -100,6 +103,43 @@ func (h *ProductHandler) GetProductByID(c *gin.Context) {
 	}
 
 	response.OK(c, product, "")
+}
+
+// @Summary     Show Product List
+// @Description An API to show product list
+// @ID          list
+// @Tags  	    product
+// @Accept      json
+// @Produce     json
+// @Param       keyword query string false "title search by keyword"
+// @Success     200 {object} response.SuccessBody{data=[]entity.Product,meta=response.MetaInfo}
+// @Failure     404 {object} response.ErrorBody
+// @Failure     500 {object} response.ErrorBody
+// @Router      /products [get]
+func (h *ProductHandler) GetProducts(c *gin.Context) {
+	condition, _ := strconv.Atoi(c.Query("condition"))
+	offset, _ := strconv.Atoi(c.Query("offset"))
+	limit, _ := strconv.Atoi(c.Query("limit"))
+	payload := &entity.GetProductPayload{
+		SKU:          c.Query("sku"),
+		TitleKeyword: c.Query("keyword"),
+		Category:     c.Query("category"),
+		Condition:    int8(condition),
+		// TODO: Adjust tenant payload
+		Tenant:  types.TenantTypeNameToValue[c.Query("tenant")],
+		OrderBy: c.Query("orderby"),
+		Offset:  offset,
+		Limit:   limit,
+	}
+	products, total, err := h.ProductUsecase.GetProducts(c.Request.Context(), payload)
+	if err != nil {
+		h.Logger.Error(err, "http - v1 - GetProducts")
+		response.Error(c, err)
+
+		return
+	}
+
+	response.OKWithPagination(c, products, "", total, payload.Offset, payload.Limit)
 }
 
 // @Summary     Update Product
